[gd_scene load_steps=9 format=3 uid="uid://8qxndi2yrha4"]

[ext_resource type="Script" uid="uid://c45aq5f3hrk3c" path="res://Scenes/UI/avatar_ui.gd" id="1_g1bmp"]
[ext_resource type="Texture2D" uid="uid://rvjxlktxs5eu" path="res://art/1bit/XaviArt/avatarUI/avatar-decoration.png" id="1_mmosb"]
[ext_resource type="PackedScene" uid="uid://c5lfr6iekpgsw" path="res://Scenes/UI/health_ui.tscn" id="2_oqe2p"]
[ext_resource type="Texture2D" uid="uid://cwgrsnu4yq2vr" path="res://art/1bit/XaviArt/avatarUI/avatar-demo.png" id="2_wn3wv"]
[ext_resource type="Texture2D" uid="uid://bhxiiwpgv8pa7" path="res://art/1bit/XaviArt/avatarUI/avatar-hover.png" id="3_g1bmp"]
[ext_resource type="Texture2D" uid="uid://b4f1kwkoqt78q" path="res://art/1bit/XaviArt/avatarUI/hp-bar_under.png" id="4_oqe2p"]
[ext_resource type="Texture2D" uid="uid://chb2ev3a1vg2a" path="res://art/1bit/XaviArt/avatarUI/hp-bar.png" id="5_pxvw1"]
[ext_resource type="Texture2D" uid="uid://ce2yqf6f63s8b" path="res://art/1bit/XaviArt/avatarUI/hp-bar_progress.png" id="6_jlbw7"]

[node name="AvatarUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g1bmp")

[node name="hpBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 23.0
offset_top = 24.0
offset_right = 123.0
offset_bottom = 40.0
value = 50.0
texture_under = ExtResource("4_oqe2p")
texture_over = ExtResource("5_pxvw1")
texture_progress = ExtResource("6_jlbw7")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
anchors_preset = 0
offset_right = 10.0
offset_bottom = 15.0

[node name="HealthUI" parent="Control" instance=ExtResource("2_oqe2p")]
unique_name_in_owner = true
layout_mode = 2
offset_left = 44.0
offset_top = 8.0
offset_right = 164.0
offset_bottom = 24.0
show_max_hp = true

[node name="backgroundAvatar" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -4.0
offset_top = -5.0
offset_right = 44.0
offset_bottom = 43.0
texture = ExtResource("1_mmosb")

[node name="AvatarButton" type="TextureButton" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_wn3wv")
texture_pressed = ExtResource("3_g1bmp")
texture_hover = ExtResource("3_g1bmp")
texture_disabled = ExtResource("2_wn3wv")
